[FIX] Ya compila
Corregido pequeño error que hacía que no compilara.
Corregidas pequeñas erratas.

--- a/memoria/figuras.tex
+++ b/memoria/figuras.tex
@@ -49,7 +49,7 @@
 	\node at (7,4) {${VM}_{n-1}$};
 	\node at (9,4) {${VM}_n$};
 	\node at (5,2.5) {\textsc{Software de virtualización}};
-	\node at (5,1.5) {\textsc{Sistema operativo} {\tiny (Anfitrion)}};
+	\node at (5,1.5) {\textsc{Sistema operativo} {\tiny (Anfitrión)}};
 	\node at (5,0.5) {\textsc{Hardware}};
 \end{tikzpicture}
 }
@@ -72,7 +72,7 @@
 	\node at (7,4) {${VM}_{n-1}$};
 	\node at (9,4) {${VM}_n$};
 	\node at (6,2.5) {\textsc{Software de virtualización}};
-	\node at (5,1.5) {\textsc{Sistema operativo} {\tiny (Anfitrion)}};
+	\node at (5,1.5) {\textsc{Sistema operativo} {\tiny (Anfitrión)}};
 	\node at (5,0.5) {\textsc{Hardware}};
 \end{tikzpicture}
 }
