--- a/memoria/partes/b/capitulo1.tex
+++ b/memoria/partes/b/capitulo1.tex
@@ -63,7 +63,7 @@ Desde el punto de vista de su arquitectura, se basa en el modelo MVC (Controlado
 \item Reduce los riesgos del desarrollo.
 \item Proporciona una arquitectura consistente entre aplicaciones, ya que todas las aplicaciones generadas comparten una arquitectura común. 
 \item El programador que trabaje con un framework no deberá invertir gran parte de su tiempo en buscar las clases necesarias, interconectarlas o descubrir los métodos que contienen.
-\end
+\end{itemize}
 En definitiva, menor coste en el diseño, desarrollo, pruebas y mantenimiento de las aplicaciones
 
 \section{Desventajas de un framework}
