Acabado capitulo 2 Parte I
Ya esta acabado el capítulo 2 de esta parte.
FALTA: Realizar las figuras.

--- a/memoria/glosario.bib
+++ b/memoria/glosario.bib
@@ -13,6 +13,7 @@ short = {VMM},
 @GLOSSDEF{MAQVIR,
 word = {Máquina virtual},
 definition = {Software que simula a una computadora y puede ejecutar programas como si fuese una computadora real.},
+short = {VM},
 short-word = {máquina virtual},
 }
 
@@ -44,3 +45,8 @@ definition = {Especificación que detalla las instrucciones que una CPU de un or
 short = {ISA}
 }
 
+@GLOSDEF{CPU,
+word = {Central Unit Process},
+definition ={Unidad de procesos de un computador, es el elemento encargado de realizar las operaciones aritmeticológicas necesarias para el correcto funcionamiento del mismo},
+short = {CPU},
+}
