[FIX] Ahora compila y arreglado twosides

--- a/memoria/memoria.tex
+++ b/memoria/memoria.tex
@@ -9,7 +9,7 @@
 \usepackage{lettrine}
 \usepackage{float}
 \usepackage{color}
-\usepackage[top=2cm,bottom=4cm,left=3cm,right=1.5cm,asymmetric]{geometry}
+\usepackage[top=2cm,bottom=4cm,outer=1.5cm,inner=3cm]{geometry}
 \usepackage[nottoc]{tocbibind}	%Para mostrar la bibliografia en el índice
 \usepackage{tikz}
 \usepackage[refpages]{gloss} % Para el glosario
@@ -17,7 +17,6 @@
 \usepackage{chngcntr}
 \usepackage{etoolbox}
 
-\usepackage{etoolbox}  % or xpatch
 
 \input{comandos}
 
