Añadido capítulo 3 Parte I
Añadido el capítulo 3 de la Parte I.

FALTA:
-Acabar el último apartado.
-Hacer la figura.

--- a/memoria/bibliografia/bibliografia.bib
+++ b/memoria/bibliografia/bibliografia.bib
@@ -11,6 +11,32 @@ title = {Página oficial de {VM}ware},
 howpublished={\url{http://www.vmware.com/es/}},
 }
 
+@misc{vmwarework,
+title = {Página oficial de {VM}ware sobre {VM}ware: {W}orkstation},
+howpublished={\url{http://www.vmware.com/es/products/workstation/}},
+}
+
+@misc{vmwareworkhelp,
+title = {Página de soporte oficial de {VM}ware sobre {VM}ware: {W}orkstation},
+howpublished={\url{http://www.vmware.com/es/support/workstation.html}},
+}
+
+@misc{vmwareworkguiaso,
+title = {Guía de instalación de un Sistema operativo huésped para {VM}ware: {W}orkstation},
+howpublished={\url{partnerweb.vmware.com/GOSIG/home.html}},
+}
+
+@misc{refvmware1,
+title = {{G}uía de {I}nstalación y {C}onfiguración {VM}ware {W}orkstation},
+howpublished={\url{http://cadascu.wordpress.com/2012/10/16/2272/}},
+}
+
+@misc{refvmware2,
+title = {{R}equisitos de instalación de {VM}ware {W}orkstation v.5},
+howpublished={\url{https://www.vmware.com/support/ws5/doc/intro_hostreq_ws.html}},
+}
+
+
 @misc{tipoship,
 title = {\emph{<<{L}a anatomía de un hipervisor {L}inux>>}},
 author = {M. Tim Jones.},
