Actualizado figuras.tex
Actualizadas las referencias a nuevas figuras.

--- a/memoria/figuras.tex
+++ b/memoria/figuras.tex
@@ -16,6 +16,7 @@
 		{maqinavirtual}{\fbox{\textcolor{red}{ESTA FIGURA HAY QUE HACERLA}}}
 		{virtualizacionnat}{\fbox{\textcolor{red}{ESTA FIGURA HAY QUE HACERLA}}}
 		{virtualizacionhost}{\fbox{\textcolor{red}{ESTA FIGURA HAY QUE HACERLA}}}
+		{vmware}{\fbox{\parbox{70mm}{\textcolor{red}{ESTA FIGURA HAY QUE HACERLA\\ ES COMO LA ÚLTIMA PERO LAS VM ESTAN EL EL SERVIDOR}}}}
 	% PARTE II %
 		{3}{\pizarra}
 	}[\PackageError{figura}{Figura no declarada: #1}{}]
