Corregidos algunos fallos en parte b cap 1
Nada importante, algún que otro ortográfico y la definición de vista que
no quedaba claro lo que quería decir

--- a/memoria/partes/b/capitulo1.tex
+++ b/memoria/partes/b/capitulo1.tex
@@ -51,8 +51,8 @@ Desde el punto de vista de su arquitectura, se basa en el modelo MVC (Controlado
 
 
 \begin{itemize}
-\item \textbf{Modelo:} controla las operaciones lógicas y l manejo de información.
-\item \textbf{Vista:}finalmente a un miembro miembro de la familia le corresponde expresar la última forma de los datos: la interfaz gráfica que interactúa con el usuario final del programa (GUI).
+\item \textbf{Modelo:} controla las operaciones lógicas y el manejo de información.
+\item \textbf{Vista:} interfaz gráfica que interactúa con el usuario final del programa (GUI). 
 \item \textbf{Controlador:} responsable de controlar el acceso a nuestra aplicación, incluyendo cualquier tipo de información que permita la interfaz.
 \end{itemize}
 
@@ -64,12 +64,12 @@ Desde el punto de vista de su arquitectura, se basa en el modelo MVC (Controlado
 \item Proporciona una arquitectura consistente entre aplicaciones, ya que todas las aplicaciones generadas comparten una arquitectura común. 
 \item El programador que trabaje con un framework no deberá invertir gran parte de su tiempo en buscar las clases necesarias, interconectarlas o descubrir los métodos que contienen.
 \end{itemize}
-En definitiva, menor coste en el diseño, desarrollo, pruebas y mantenimiento de las aplicaciones
+En definitiva, menor coste en el diseño, desarrollo, pruebas y mantenimiento de las aplicaciones.
 
 \section{Desventajas de un framework}
 
 \begin{itemize}
-\item Limitación de la Flexibilidad: los componentes deben residir dentro de las restricciones impuestas por la arquitectura del Framework
+\item Limitación de la Flexibilidad: los componentes deben residir dentro de las restricciones impuestas por la arquitectura del Framework.
 \item Dificultad de Aprendizaje: el usuario debe estudiar qué proporciona el Framework y cómo debe hacer uso de él.
-\item Reducción de la Creatividad: puede que el usuario no pueda cambiar el comportamiento de una clase del Framework si ésta no permite que sus servicios puedan rescribirse o redefinirse
+\item Reducción de la Creatividad: puede que el usuario no pueda cambiar el comportamiento de una clase del Framework si ésta no permite que sus servicios puedan reescribirse o redefinirse.
 \end{itemize}
