--- a/memoria/memoria.tex
+++ b/memoria/memoria.tex
@@ -69,6 +69,10 @@ GIS:  	 & Carlos Vázquez Sánchez
 \addcontentsline{toc}{chapter}{Prefacio}
 \input{./partes/prefacio.tex}
 
+\chapter*{Nota}
+\addcontentsline{toc}{chapter}{Nota}
+\input{./partes/UsamosGit.tex}
+
 \mainmatter % Parte principal
 
 \part{Observación}
