[FIX] Ahora compila
Había un pequeño fallo de que un nombre se había cambiado por el camino.

La idea me gusta, pero yo no lo pondría al principio, sino al final, en
un apartado de "anotaciones" o algo del estilo

--- a/memoria/memoria.tex
+++ b/memoria/memoria.tex
@@ -71,7 +71,7 @@ GIS:  	 & Carlos Vázquez Sánchez
 
 \chapter*{Nota}
 \addcontentsline{toc}{chapter}{Nota}
-\input{./partes/UsamosGit.tex}
+\input{./partes/UsandoGit.tex}
 
 \mainmatter % Parte principal
 
