--- a/memoria/partes/prefacio.tex
+++ b/memoria/partes/prefacio.tex
@@ -5,7 +5,21 @@ FALTA:
 \begin{itemize}
 \item Explicar los objetivos y motivaciones de la práctica
 \item Recalcar que hay dos partes y en qué se centra cada una.
-\item Explicar la forma de trabajo \textit{(De forma distribuida mediante GitHub)}
+%\item Explicar la forma de trabajo \textit{(De forma distribuida mediante GitHub)}
+\end{itemize}
+\color{black}
+
+Para la realización de esta práctica hemos utilizado el software {\bf GitHub}, propiedad de 	GitHub Inc, el cual nos ha permitido trabajar sobre un repositorio al que todos los miembros del grupo teníamos acceso. Hemos elegido usar GitHub por los siguientes motivos:
+\begin{itemize}
+	\item Es un conocido programa para desarrolladores de software, lo que nos ha permitido trabajar de una forma profesional
+	\item Al ser un alto número los integrantes del grupo, nos ha sido más fácil y sencillo trabajar mediante repositorios, 
+	\item Pero principalmente debido a que dicho programa sigue una arquitectura de pizarra y soporta el conocido framework 'Ruby on Rails', lo que nos acercaba a un entorno práctico a los dos aspectos a tratar en la práctica: los framework y la arquitectura de pizarra.
+\end{itemize}
+
+\color{red}
+FALTA:
+\begin{itemize}
+%\item Explicar la forma de trabajo \textit{(De forma distribuida mediante GitHub)}
 \item Si se hace código, recalcarlo mucho.
 \item Dar paso al inicio de la primera parte.
 \end{itemize}
