--- a/memoria/partes/a/capitulo1.tex
+++ b/memoria/partes/a/capitulo1.tex
@@ -18,7 +18,7 @@ Es otras palabras, se trata de la creación mediante software de elementos hardw
 
 Dando una vuelta de tuerca más, podemos definir \emph{virtualización} como el proceso por el cual una capa de software \emph{\gloss[long]{VMM}} abstrae los recursos de la computadora física al Sistema Operativo o \emph{\gloss{MAQVIR}}.\\
 
-Cabe destacar el uso de los términos \emph{\gloss{MAQVIR}} y \gloss[short]{VMM}, pues son el eje central de los sistemas de virtualización y conviene introducirlos. Y es por esto que nuestro siguiente apartado esta dedicado a ellas.
+Cabe destacar el uso de los términos \emph{\gloss{MAQVIR}} y \gloss[short]{VMM}, pues son el eje central de los sistemas de virtualización y conviene introducirlos. Y es por esto que nuestro siguiente apartado está dedicado a ellas.
 
 \section{¿Qué es una máquina virtual?}
 
