--- a/memoria/partes/a/capitulo2.tex
+++ b/memoria/partes/a/capitulo2.tex
@@ -88,7 +88,7 @@ Cabe destacar que se trata de una manera un poco redundante, tal y cómo estaba 
 \subsection{Hipervisor}
 Ahora nos centramos en el meollo de asunto, pero,en realidad,¿nos es relevante el contenido del \gloss{HYP} o \gloss[long]{VMM}?\\
 
-Para lo que nosotros vamos a profundizar y a lo que queremos llegar, nos es completamente irrelevante, pero como nunca esta de más conocer cosas nuevas simplemente vamos a decir los componentes de un hipervisor varían según el \emph{\textquotedblleft fabricante\textquotedblright} y el tipo.\\
+Para lo que nosotros vamos a profundizar y a lo que queremos llegar, nos es completamente irrelevante, pero como nunca está de más conocer cosas nuevas simplemente vamos a decir los componentes de un hipervisor varían según el \emph{\textquotedblleft fabricante\textquotedblright} y el tipo.\\
 
 Aun así, existen una serie de elementos comunes para todos ellos, son los referentes a la organización del sistema virtual, por lo que podemos concluir con la siguiente figura:
 
