--- a/memoria/partes/a/capitulo3.tex
+++ b/memoria/partes/a/capitulo3.tex
@@ -1,5 +1,5 @@
 \chapter{VMware: Workstation}
-En este capítulo nos vamos a centrar en la plataforma de VMware, VMware: Workstation\cite{vmwarework}, los pasos a seguir serán: analizar y ver que tipo de virtualización utiliza, describir sus principales características y dar ejemplos sobre su uso e instalación.\\
+En este capítulo nos vamos a centrar en la plataforma de VMware, VMware: Workstation\cite{vmwarework}, los pasos a seguir serán: analizar y ver qué tipo de virtualización utiliza, describir sus principales características y dar ejemplos sobre su uso e instalación.\\
 
 Pero, antes de nada, es necesario explicar por qué escogemos esta plataforma.
 
@@ -35,7 +35,7 @@ Entre las que hemos encontrado nos gustaría destacar:
 Pero sin duda, si queremos describir por qué la universidad escogió este sistema, es debido a su potencia para gran cantidad de ordenadores, puesto que en la universidad se da soporte a muchos ordenadores virtualizados, prácticamente todos los de la universidad.
 
 \subsection{Esquema de arquitectura}
-Por tanto, siguiendo la linea del capítulo anterior, este sería el esquema de la arquitectura instalada en los ordenadores de las aulas de la universidad:
+Por tanto, siguiendo la línea del capítulo anterior, este sería el esquema de la arquitectura instalada en los ordenadores de las aulas de la universidad:
 
 \begin{figure}[H]
 \begin{center}
