Añadida explicación del modelo en cascada
Como es una nota a pie de página me he alargado lo mínimo posible.

--- a/memoria/partes/b/capitulo1.tex
+++ b/memoria/partes/b/capitulo1.tex
@@ -1,5 +1,5 @@
 \chapter{Introducción}
-\lettrine[lines=1,slope=4pt,findent=0pt]{E}{}n la segunda parte de la práctica se nos pide el diseño de una plataforma que implemente una arquitectura de pizarra, para ello vamos a seguir un modelo de desarrollo en cascada\footnote{\textcolor{red}{EXPLICACIÓN DEL MODELO EN CASCADA}}.\\
+\lettrine[lines=1,slope=4pt,findent=0pt]{E}{}n la segunda parte de la práctica se nos pide el diseño de una plataforma que implemente una arquitectura de pizarra, para ello vamos a seguir un modelo de desarrollo en cascada\footnote{Modelo de que divide el desarrollo de software en etapas rigurosamente definidas, de forma que para el inicio de una etapa debe esperarse previamente que finalice la anterior. Las etapas son: análisis de requerimientos, diseño, implementación, pruebas y mantenimiento.}.\\
 
 Por tanto, hemos dividido esta parte de la memoria en cada una de las fases de éste modelo de desarrollo, pero antes es necesario centrarnos en cómo debe diseñarse esta plataforma y que implica que se diseñe de esta manera.
 
