--- a/memoria/partes/prefacio.tex
+++ b/memoria/partes/prefacio.tex
@@ -8,7 +8,25 @@ FALTA:
 %\item Explicar la forma de trabajo \textit{(De forma distribuida mediante GitHub)}
 \end{itemize}
 \color{black}
+\section{Objetivos y motivaciones}
+Tanto en el ámbito informático académico como en el profesional, en ocasiones puede ser necesario un cambio de sistema operativo a la hora de trabajar. Esto puede estar ocasionado tanto por requisitos del lenguaje a utilizar, por una arquitectura más adecuada o simplemente por cuestión de preferencias. Pero estos cambios implicarían una CPU para cada sistema operativo, lo que lo haría terriblemente ineficiente desde el punto de vista económico, ergonómico y logístico. \\
+Por ello es necesario conocer la arquitectura del software que permita escoger entre más de un sistema operativo, y que el adicional (aún sin llegar al nivel de eficiencia del sistema nativo) trabaje a un nivel óptimo.\\
+Pero además de observar y comprender la arquitectura de un software conocido y utilizado comercialmente, también son necesarios los conocimientos necesarios para poder diseñar a un nivel de arquitectura y diseño el funcionamiento de una plataforma. Para ello crearemos una biblioteca en la que cualquier usuario podrá programar un agente capaz de leer y escribir en una pizarra potencialmente remota.\\
+Por tanto los dos principales objetivos de la práctica serán:
+\begin{itemize}
+\item Definir la arquitectura de un sistema de virtualización.
+\item Describir la arquitectura y diseño de una plataforma que implemente la arquitectura de pizarra que pueda ser utilizada por otros programas.
+\end{itemize}
 
+\section{Estructura de la memoria}
+Debido a las dos partes claramente diferenciadas e la práctica, se harán dos secciones claramente diferenciadas :
+\begin{itemize}
+\item Parte de OBSERVACIÓN: en la que tras una pequeña introducción se detallará la arquitectura del sistema escogido
+\item Parte de DISEÑO: \color{red} UNA VEZ ACABADOS LOS REQUISITOS, UML Y DEMÁS ACTUALIZAR ESTA SECCIÓN
+\end{itemize}
+
+\color{black}
+\section{GitHub}
 Para la realización de esta práctica hemos utilizado el software \textbf{GitHub}, propiedad de 	{GitHub Inc}, el cual nos ha permitido trabajar sobre un repositorio al que todos los miembros del grupo teníamos acceso. Hemos elegido usar GitHub por los siguientes motivos:
 \begin{itemize}
 	\item Es un conocido programa para desarrolladores de software, lo que nos ha permitido trabajar de una forma profesional.
@@ -24,3 +42,4 @@ FALTA:
 \item Dar paso al inicio de la primera parte.
 \end{itemize}
 \color{black}
+
